<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E80B4"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/you_won"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/play_again"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true" />
        <android.support.v4.widget.Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/main_menu"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:focusable="true" />
    </LinearLayout>


</LinearLayout>